# pygol

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pygol/: app.py  board.py
src/pygol/boards/: glider.txt  gospel_glider_gun.txt
tests/: test_iterate_state.py
